--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,93 @@
-img{
-    
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+body{
+    font-size: 100%;
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 25px;
+}
+.header-img{
+    width: 130px;
+}
+.header-menu{
+    display: flex;
+    gap: 50px;
+}
+.header-menu-item{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: 400;
+    font-size: 20px;
 }
 
+.main{
+    border-top: 0.4px solid rgb(0, 0, 0);
+    margin-bottom: 50px;
+}
+.main-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.main-content-written{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.main-content-written-title{
+    font-family: 'Alfa Slab One', cursive;
+    font-weight: 400;
+    font-size: 64px;
+    color: rgb(0, 0, 0);
+}
+.main-content-written-description{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+}
+.main-content-written-button{
+    background-color: rgb(255, 0, 0);
+    color: rgb(0, 0, 0);
+    width: 180px;
+    height: 65px;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 4px 5px 4px rgb(0, 0, 0, 0.25);
+    font-family: 'Alfa Slab One', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+}
+.main-content-img{
+    width: 350px;
+    margin-top: 40px;
+}
+
+.secondary-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 40px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify;
+}
+.secondary-content-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
